track_service/t-postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: t-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: t-postgres
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: t-postgres-deployment
spec:
  selector:
    matchLabels:
      app: t-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: t-postgres
    spec:
      containers:
        - image: postgres:13
          name: t-postgres
          ports:
            - containerPort: 5432
              name: t-postgres
          volumeMounts:
            - name: t-postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: t-postgres-persistent-storage
          persistentVolumeClaim:
            claimName: t-postgres-pvc
