track_service/track-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: track-service
spec:
  type: NodePort
  selector:
    app: track-service
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
